# hazel-corpus

./: .gitmodules  README.md
ill-typed/: README.md  dune  gen.sh  ill.hazel  ill.ml  ill.typed.hazel  prog0001.hazel  prog0002.hazel  prog0002.typed.hazel  prog0003.hazel  prog0003.typed.hazel  prog0004.hazel  prog0004.typed.hazel  prog0005.hazel  prog0005.typed.hazel  prog0015.hazel  prog0015.typed.hazel  prog0059.hazel  prog0059.typed.hazel  prog0062.hazel  prog0062.typed.hazel  prog0066.hazel  prog0066.typed.hazel  prog0076.hazel  prog0076.typed.hazel  prog0077.hazel  prog0077.typed.hazel  prog0080.hazel  prog0080.typed.hazel  prog0081.hazel  prog0081.typed.hazel  prog0096.hazel  prog0096.typed.hazel  prog0099.hazel  prog0099.typed.hazel  prog0100.hazel  prog0100.typed.hazel  prog0101.hazel  prog0101.typed.hazel  prog0103.hazel  (+727 more)
ocaml-stdlib/: README.md  dune  list.hazel  list.ml
