(rule
 (deps prog0001.ml)
 (alias runtest)
 (action
  (progn
   (with-stdout-to
    prog0001.out
    (run hazel_of_ocaml -both prog0001.ml))
   (diff prog0001.hazel prog0001.out))))

(rule
 (deps prog0002.ml)
 (alias runtest)
 (action
  (progn
   (with-stdout-to
    prog0002.out
    (run hazel_of_ocaml -both prog0002.ml))
   (diff prog0002.hazel prog0002.out))))

(rule
 (deps prog0003.ml)
 (alias runtest)
 (action
  (progn
   (with-stdout-to
    prog0003.out
    (run hazel_of_ocaml -both prog0003.ml))
   (diff prog0003.hazel prog0003.out))))

(rule
 (deps prog0004.ml)
 (alias runtest)
 (action
  (progn
   (with-stdout-to
    prog0004.out
    (run hazel_of_ocaml -both prog0004.ml))
   (diff prog0004.hazel prog0004.out))))

(rule
 (deps prog0005.ml)
 (alias runtest)
 (action
  (progn
   (with-stdout-to
    prog0005.out
    (run hazel_of_ocaml -both prog0005.ml))
   (diff prog0005.hazel prog0005.out))))
